k8s/sonar/sonar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar
  namespace: gitlab
  labels:
    app: sonar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: gitlab
        image: sonarqube
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9000
