k8s/sonar/sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar
  namespace: gitlab
spec:
  ports:
    - name: web
      port: 9000
  selector:
    app: sonar
