k8s/sonar/sonar-IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonar
  namespace: gitlab
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sonar.zcbb.dashboard`)
    kind: Rule
    services:
    - name: sonar
      port: 9000
